<?php 
namespace App\Models;

use Illuminate\Database\Eloquent\Model;
//Generated By PlantUML Command
class Candidate extends Model{

    protected $fillable= ['name','lastname','number_Simbolo'];

    public $timestamps = false;

}